--- a/mobile.css
+++ b/mobile.css
@@ -436,3 +436,14 @@
 }
 
 
+@media (max-width:410px) {
+    @keyframes slide-text {
+        0% {
+            transform: translateX(0px);
+        }
+    
+        100% {
+            transform: translateX(-324px);
+        }
+    }
+}
