--- a/main.css
+++ b/main.css
@@ -721,7 +721,7 @@ body {
     justify-content: start;
     flex-wrap: nowrap;
     gap: 10px;
-    padding: 0 10px;
+    /* padding: 0 10px; */
     overflow: hidden;
 }
 
@@ -1021,7 +1021,7 @@ body {
 }
 
 .con4right {
-    height: 2600px;
+    height: 2600px; 
     width: 50%;
     background-color: rgb(239, 239, 239);
 }
@@ -1139,6 +1139,9 @@ body {
     border: 0;
     border-radius: 7px;
     margin: 0 40px 40px 0;
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: 500;
 }
 
 .container6 {
@@ -1558,7 +1561,7 @@ body {
 .footerup-middle>ul>li {
     text-align: center;
     list-style-type: none;
-    margin-bottom: 18px; 
+    margin-bottom: 18px;
     color: grey;
 }
 
@@ -1574,7 +1577,7 @@ body {
 
     &:hover {
         color: black;
-        transform: translateY(-3px) ;
+        transform: translateY(-3px);
     }
 }
 
@@ -1583,7 +1586,7 @@ body {
     transition: all 0.3s linear;
 
     &:hover {
-        transform: translateY(-3px) ;
+        transform: translateY(-3px);
         color: black;
     }
 }
@@ -1602,10 +1605,11 @@ body {
     border-radius: 50%;
     border: 5px solid transparent;
     transition: all 0.3s linear;
+
     &:hover {
-        background-color:rgb(255, 145, 0);
-        border-color:rgb(255, 145, 0);
-        transform: translateY(-3px) ;
+        background-color: rgb(255, 145, 0);
+        border-color: rgb(255, 145, 0);
+        transform: translateY(-3px);
     }
 }
 
@@ -1625,7 +1629,7 @@ body {
 }
 
 
-.footer-end{
+.footer-end {
     height: 100px;
     width: 100%;
     /* background-color: #fff; */
@@ -1636,24 +1640,25 @@ body {
     gap: 20px;
 }
 
-.ft-end1{
+.ft-end1 {
     width: 100%;
     display: flex;
-    justify-content:center; 
+    justify-content: center;
     gap: 20px;
     color: grey;
 }
 
-.ft-end1>span{
+.ft-end1>span {
     cursor: pointer;
     transition: all 0.3s linear;
-    &:hover{
+
+    &:hover {
         color: black;
         transform: translateY(-3px);
     }
 }
 
-.ft-end2{
+.ft-end2 {
     width: 100%;
     /* background-color: orange; */
     text-align: center;
@@ -1665,30 +1670,93 @@ body {
     color: grey;
 }
 
-.ft-end2>span:first-child{
+.ft-end2>span:first-child {
     color: black;
 }
 
-.ft-end2>span:nth-child(2){
+.ft-end2>span:nth-child(2) {
     cursor: pointer;
-    &:hover>.dev-name{
+
+    &:hover>.dev-name {
         transition: all 0.3s linear;
         color: rgb(61, 61, 61);
     }
 }
-.dev-name{
+
+.dev-name {
     color: black;
     cursor: pointer;
 }
 
-.powered-name{
+.powered-name {
     color: black;
 }
 
-.ft-end2>span:nth-child(3){
+.ft-end2>span:nth-child(3) {
     cursor: pointer;
-    &:hover>.powered-name{
+
+    &:hover>.powered-name {
         transition: all 0.3s linear;
         color: rgb(61, 61, 61);
+    }
+}
+
+.products-con1 {
+    width: 100%;
+    display: flex;
+    align-items: center;
+
+    flex-direction: column;
+    padding-top: 100px;
+}
+
+.products-con1>p {
+    font-size: 65px;
+    padding: 0 200px;
+    text-align: center;
+}
+
+/* my code====== */
+
+
+.products-con1-slider-area {
+    width: 18vw;
+    overflow: hidden;
+    padding: 0 0.25vw;
+}
+
+.products-con1-slider {
+    width: 200%;
+    display: flex;
+    align-items: center;
+    animation-name: slide-text-2;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-duration: 9s;
+}
+
+.products-con1-slider>div {
+    font-size: 85%;
+    width: 50%;
+    display: flex;
+    align-items: center;
+}
+
+.products-con1-slider>div>div {
+    min-height: 0.5vw;
+    min-width: 0.5vw;
+    margin: 0 0.75vw 0 0;
+    background-color: orange;
+    border-radius: 50%;
+}
+
+
+@keyframes slide-text-2 {
+    0% {
+        transform: translateX(0px);
+    }
+
+    100% {
+        transform: translateX(-50%);
     }
 }
